2021-02-26  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: QPDFFormFieldObjectHelper was mis-handling /DA, /Q, and
	/DR in ways that usually didn't matter but were still wrong. /DA
	and /Q were being found in the field hierarchy, but if not found,
	the default values in the /AcroForm dictionary were not being
	used. /DR was being treated as an inherited field in the field
	dictionary, which is wrong. It is actually supposed to come from
	the /AcroForm dictionary. We were getting away with this since
	many popular form writers seem to copy it to the field as well,
	even though the spec makes no mention of doing this. To support
	this, QPDFFormFieldObjectHelper::getDefaultResources was added.

2021-02-25  Jay Berkenbilt  <ejb@ql.org>

	* Update StreamDataProvider examples to use copyStream() when they
	want to get to the original stream data from the provider. Prior
	to 10.2.0, we had to copy the stream to another QPDF, but now we
	can just use copyStream().

	* Bug fix/behavior change: when QPDF::replaceObject or
	QPDF::swapObjects is called, existing QPDFObjectHandle instances
	will now notice the change. This removes a long-standing source of
	bugs and confusing behavior.

2021-02-23  Jay Berkenbilt  <ejb@ql.org>

	* 10.2.0: release

	* The test for the input and output files being the same wasn't
	implemented correctly for --split-pages since the specified output
	file is really a pattern, not the actual output file.

2021-02-22  Jay Berkenbilt  <ejb@ql.org>

	* From qpdf CLI, --pages and --split-pages will properly preserve
	interactive form functionality. Fixes #340.

	* Add QPDFAcroFormDocumentHelper::copyFieldsFromForeignPage to
	copy form fields from a foreign page into the current file.

	* Add QPDFFormFieldObjectHelper::getTopLevelField to get the
	top-level field for a given form field.

	* Update pdf-overlay-page example to include copying of
	annotations.

	* Add a new version of QPDFPageObjectHelper::placeFormXObject that